--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-haptics": "^14.0.1",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
+    "expo-localization": "^16.0.1",
     "expo-router": "4.0.17",
     "expo-secure-store": "~12.8.1",
     "expo-speech": "^11.7.0",
@@ -29,6 +30,7 @@
     "expo-symbols": "^0.2.2",
     "expo-system-ui": "^4.0.7",
     "expo-web-browser": "^14.0.2",
+    "i18n-js": "^4.5.1",
     "lucide-react-native": "^0.475.0",
     "openai": "^4.29.1",
     "react": "18.3.1",
