--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-constants": "^17.0.5",
     "expo-font": "^13.0.3",
     "expo-haptics": "^14.0.1",
+    "expo-in-app-purchases": "^14.5.0",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
     "expo-localization": "^16.0.1",
