--- a/app.json
+++ b/app.json
@@ -8,13 +8,22 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.kochapp.app"
     },
     "web": {
       "bundler": "metro",
       "output": "single"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      [
+        "expo-in-app-purchases",
+        {
+          "appleTeamId": "U3H5S3GC83"
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     }
