--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "expo-constants": "^17.0.5",
     "expo-font": "^13.0.3",
     "expo-haptics": "^14.0.1",
-    "expo-in-app-purchases": "^14.5.0",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
     "expo-localization": "^16.0.1",
@@ -39,6 +38,7 @@
     "react-native": "0.76.6",
     "react-native-drax": "^0.10.3",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-iap": "^12.16.2",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.4.0",
@@ -51,5 +51,6 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
     "typescript": "^5.3.3"
-  }
+  },
+  "type": "module"
 }
